# llmpu

./: LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: manual-publish-pypi.yml  publish-pypi.yml
llmpu/: __init__.py  config.py  executor.py  llm.py  register.py  srpc.py
