[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmpu"
version = "0.0.2"
description = "Large Language Model Process Unit"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "yzITI" }, { name = "Phantomlsh" }]
dependencies = [
    "google-genai>=2.8.0",
    "numpy>=2.4.6",
]

[tool.setuptools.packages.find]
include = ["llmpu*"]
